Separate the notebooks

--- a/Ant-v4-Truncate.ipynb
+++ b/Ant-v4-Truncate.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RESULTS USING THE SIGNAL OF TRUNCATE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -33,7 +40,7 @@
     "env='Ant-v4'\n",
     "df_comper = pd.DataFrame()\n",
     "for i in range(1,6):\n",
-    "  path ='COMPER_DDPG/data/'+env+'/train/trial'+str(i)+'/progress.json'\n",
+    "  path ='COMPER_DDPG/data_using_truncate/'+env+'/train/trial'+str(i)+'/progress.json'\n",
     "  aux = pd.read_json(path,lines=True)    \n",
     "  df_comper = pd.concat([df_comper,aux])\n",
     "df_comper[\"Method\"]=\"COMPER-DDPG\"\n",
@@ -56,7 +63,7 @@
    "source": [
     "df_ddpg = pd.DataFrame()\n",
     "for i in range(1,6):\n",
-    "  path ='DPPG/data/'+env+'/train/trial'+str(i)+'/progress.json'\n",
+    "  path ='DPPG/data_using_truncate/'+env+'/train/trial'+str(i)+'/progress.json'\n",
     "  aux = pd.read_json(path,lines=True)    \n",
     "  df_ddpg = pd.concat([df_ddpg,aux])\n",
     "df_ddpg[\"Method\"]=\"DDPG\"\n",
