Separate the notebooks

--- a/Pendulum-v1-Done.ipynb
+++ b/Pendulum-v1-Done.ipynb
@@ -944,7 +944,7 @@
     }
    ],
    "source": [
-    "path ='COMPER_DDPG/data/'+env+'/eval/progress.json'\n",
+    "path ='COMPER_DDPG/data_using_done/'+env+'/eval/progress.json'\n",
     "df_comper_eval = pd.read_json(path,lines=True)\n",
     "df_comper_eval[\"Method\"]=\"COMPER\"\n",
     "print(df_comper_eval.shape)\n",
@@ -1162,7 +1162,7 @@
     }
    ],
    "source": [
-    "path ='DPPG/data/'+env+'/eval/progress.json'\n",
+    "path ='DPPG/data_using_done/'+env+'/eval/progress.json'\n",
     "df_ddpg_eval = pd.read_json(path,lines=True)\n",
     "df_ddpg_eval[\"Method\"]=\"DDPG\"\n",
     "print(df_ddpg_eval.shape)\n",
@@ -1831,6 +1831,30 @@
    "source": [
     "df_eval_rolling=pd.concat([df_comper_eval_rolling_avg,df_ddpg_eval_rolling_avg])\n",
     "sns.lineplot(data=df_eval_rolling, x=\"Int\", y=\"EpRewRolling\",hue='Method')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.catplot(data=df, kind=\"bar\",x=\"Method\", y=\"Avg100Ep\", hue=\"Method\",\n",
+    "    errorbar=\"sd\")\n",
+    "g.despine(left=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.lmplot(\n",
+    "    data=df,\n",
+    "    x=\"TotalItr\", y=\"Avg100Ep\", hue=\"Method\",\n",
+    "    height=5\n",
+    ")"
    ]
   }
  ],
